--- a/styles/index.css
+++ b/styles/index.css
@@ -20,3 +20,15 @@ body, html {
 .w3-bar .w3-button {
   padding: 16px;
 }
+
+.map{
+  width: 95%;
+  height: 300px;
+}
+
+@media screen and (min-width: 500px) {
+  .map{
+    width: 400px;
+    height: 300px;
+  }
+}
